gerando números secretos a partir do Math.random

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <div>O número secreto é maior <i class="fa-solid fa-arrow-up"></i></div>
   </div>
 
+  <script src="JS/sortear-numero.js"></script>
+
 </body>
 
 </html>
