realizando validações no reconhecimento de voz

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
   <script src="JS/sortear-numero.js"></script>
   <script src="JS/reconhecimento-de-voz.js"></script>
+  <script src="JS/validacao.js"></script>
 
 </body>
 
